[project]
name = "SoundScript" 
version = "0.1.0" 
description = "An innovative project designed to break down communication barriers by transforming recorded audio calls into concise, English-language summaries with contextual analysis. Seamless solutions for different languages or hearing impairments. " 
readme = "README.md" 

dependencies = [
    "Flask",
    "flask-cors",
    "openai-whisper",
    "google-generativeai",
    "python-dotenv",
    "faster-whisper",
    "gunicorn",
]

[build-system]
requires = ["setuptools>=61.0"] 
build-backend = "setuptools.build_meta" 